# ViceAtlas

./: .gitignore
ingestion-layer/: .env.example  pyproject.toml
ingestion-layer/scripts/: run_reddit_test.py  run_rss_test.py  run_youtube_test.py
ingestion-layer/src/ingestion/: config.py
ingestion-layer/src/ingestion/models/: schemas.py
ingestion-layer/src/ingestion/scrapers/: reddit_scraper.py  rss_parser.py  youtube_monitor.py
ingestion-layer/src/ingestion/utils/: logger.py
